# rich-nvr

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
client/: AddStreamDialog.cpp  AddStreamDialog.h  AsyncNetworkWorker.cpp  AsyncNetworkWorker.h  CMakeLists.txt  CamerasInfoDialog.cpp  CamerasInfoDialog.h  ClientConfig.cpp  ClientConfig.h  ClientNetworking.cpp  ClientNetworking.h  ClientSettings.h  ConfigurationPanel.cpp  ConfigurationPanel.h  Dashboard.cpp  Dashboard.h  FileBrowserWindow.cpp  FileBrowserWindow.h  FloatingOverlay.cpp  FloatingOverlay.h  GuiHelpers.h  MotionFrameDialog.cpp  MotionFrameDialog.h  Overlay.qml  OverlayBox.cpp  OverlayBox.h  Remote.cpp  Remote.h  RemoteServerDialog.cpp  RemoteServerDialog.h  VideoPlayer.cpp  VideoPlayer.h  VideoSurface.cpp  VideoSurface.h  VideoWrapper.cpp  VideoWrapper.h  client.cpp  docker-compose.yml  main.cpp
client/config/: client_config.json
core/: CameraManager.cpp  CameraManager.h  CameraStream.cpp  CameraStream.h  Defaults.h  PathUtils.cpp  PathUtils.h  SegmentWorker.cpp  SegmentWorker.h  Settings.cpp  Settings.h  Types.h  VideoExporter.cpp  VideoExporter.h  conversations.cpp  conversations.h  gstreamerRtspProxy.cpp  gstreamerRtspProxy.h  live555RtspProxy.cpp  live555RtspProxy.h
docs/: BUILDING.md  DOCKER.md  USAGE.md
mingw/: CMakeLists.txt  CMakePresets.json
mingw3264/: CMakeLists.txt  CMakePresets.json
mingw3264/cmake/toolchains/: mingw32.cmake  mingw64.cmake
server/: CMakeLists.txt  docker-compose.yml  main.cpp
